fix offset of barchart title from bar when barchart is smaller than 8% of width on small screen or height on large screen

--- a/src/components/Charting/BarChart/BarChart.css
+++ b/src/components/Charting/BarChart/BarChart.css
@@ -73,6 +73,7 @@
     padding-top: 5%;
     align-items: flex-start;
     justify-content: center;
+    position:relative;
   }
   
 
